--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nostr-dev-kit/ndk-wallet": "^0.5.0",
     "@opensearch-project/opensearch": "^2.12.0",
     "@prisma/client": "^5.20.0",
+    "@shocknet/clink-sdk": "^1.4.0",
     "@slack/web-api": "^7.6.0",
     "@svgr/webpack": "^8.1.0",
     "@yudiel/react-qr-scanner": "^2.0.8",
