--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -843,6 +843,27 @@ services:
       CONNECT: "localhost:${LNBITS_WEB_PORT_V1}"
       TORDIR: "/app/.tor"
     cpu_shares: "${CPU_SHARES_LOW}"
+  lnpub:
+    image: ghcr.io/shocknet/lightning-pub@sha256:1eed67b8bc486654633c395100c8f0e0247cb33710d2e10ce2a40c8c9344ac74
+    container_name: lnpub
+    profiles:
+      - wallets
+    restart: unless-stopped
+    volumes:
+      - lnpub:/app/data
+      - lnd:/app/.lnd
+    environment:
+      - LND_ADDRESS=lnd:10009
+      - LND_CERT_PATH=/app/.lnd/tls.cert
+      - LND_MACAROON_PATH=/app/.lnd/data/chain/bitcoin/regtest/admin.macaroon
+    ports:
+      - ${LNPUB_PORT_1776:-1776}:1776
+      - ${LNPUB_PORT_1777:-1777}:1777
+    depends_on:
+      lnd:
+        condition: service_healthy
+        restart: true
+    cpu_shares: "${CPU_SHARES_LOW}"
   dnsmasq:
     image: 4km3/dnsmasq:2.90-r3
     profiles:
@@ -879,6 +900,7 @@ volumes:
   tordata:
   eclair:
   dnsmasq:
+  lnpub:
 
 networks:
   default: {}
