--- a/package.json
+++ b/package.json
@@ -115,7 +115,8 @@
     "workbox-strategies": "^7.1.0",
     "workbox-webpack-plugin": "^7.1.0",
     "workbox-window": "^7.1.0",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "copy-webpack-plugin": "^13.0.1"
   },
   "engines": {
     "node": "18.20.4"
@@ -130,7 +131,6 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.2.15",
-    "copy-webpack-plugin": "^13.0.1",
     "eslint": "^9.12.0",
     "jest": "^29.7.0",
     "standard": "^17.1.2"
