--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@nostr-dev-kit/ndk-wallet": "^0.5.0",
     "@opensearch-project/opensearch": "^2.12.0",
     "@prisma/client": "^5.20.0",
-    "@shocknet/clink-sdk": "^1.3.1",
+    "@shocknet/clink-sdk": "^1.3.2",
     "@slack/web-api": "^7.6.0",
     "@svgr/webpack": "^8.1.0",
     "@yudiel/react-qr-scanner": "^2.0.8",
@@ -41,6 +41,7 @@
     "classnames": "^2.5.1",
     "clipboard-copy": "^4.0.1",
     "cookie": "^1.0.1",
+    "copy-webpack-plugin": "^13.0.1",
     "cross-fetch": "^4.0.0",
     "csv-parser": "^3.0.0",
     "domino": "^2.1.6",
@@ -116,8 +117,7 @@
     "workbox-strategies": "^7.1.0",
     "workbox-webpack-plugin": "^7.1.0",
     "workbox-window": "^7.1.0",
-    "yup": "^1.4.0",
-    "copy-webpack-plugin": "^13.0.1"
+    "yup": "^1.4.0"
   },
   "engines": {
     "node": "18.20.4"
