--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@auth/prisma-adapter": "^2.7.0",
     "@cashu/cashu-ts": "^2.4.1",
     "@graphql-tools/schema": "^10.0.6",
+    "@lexical/code-shiki": "^0.35.0",
     "@lexical/react": "^0.35.0",
     "@lightninglabs/lnc-web": "^0.3.2-alpha",
     "@noble/curves": "^1.6.0",
@@ -87,7 +88,6 @@
     "react-markdown": "^9.0.1",
     "react-particles": "^2.12.2",
     "react-string-replace": "^1.1.1",
-    "react-syntax-highlighter": "^15.5.0",
     "react-textarea-autosize": "^8.5.9",
     "react-twitter-embed": "^4.0.4",
     "react-youtube": "^10.1.0",
